objects/kugo2p__Payment_Profile__c.object
<CustomObject>
    <description>Kugamon - Main object that contains Recurring Payment data points. A Recurring Charge is created from an Order.</description>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Charges</relationshipLabel>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Allow_Missed_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows payments to be missed on a Scheduled Payment Profile without suspending the profile.</description>
        <inlineHelpText>If checked, allows payments to be missed on a Scheduled Payment Profile without suspending the profile.</inlineHelpText>
        <label>Allow Missed Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Amount__c</fullName>
        <label>Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__AuthNet_Subscription_Id__c</fullName>
        <inlineHelpText>Assigned by Authorize.net when an ARB profile is created.</inlineHelpText>
        <label>AuthNet Subscription ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Contact__c</fullName>
        <label>Contact Billing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Charges</relationshipLabel>
        <relationshipName>Payment_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to flag the customer&apos;s default (or preferred) credit card profile.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <inlineHelpText>Details about the payment profile.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Frequency__c</fullName>
        <inlineHelpText>Frequency of charges (e.g. every X months) for a subscription.</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__FuturePay_Id__c</fullName>
        <inlineHelpText>WorldPay recurring payment (FuturePay) Id.</inlineHelpText>
        <label>WorldPay Recurring Payment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Initial_Amount__c</fullName>
        <inlineHelpText>Initial amount to charge at the beginning of the subscription.</inlineHelpText>
        <label>Initial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Invoice_Number__c</fullName>
        <description>Number to use as a root invoice number for each payment when creating recurring payments in Salesforce.</description>
        <inlineHelpText>Number to use as a root invoice number for each payment when creating recurring payments in Salesforce.</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Last_4_Digits__c</fullName>
        <inlineHelpText>Last four digits of credit card used.</inlineHelpText>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Next_Payment_Date__c</fullName>
        <inlineHelpText>Date of next scheduled payment.   This field is automatically updated when PayPal notifications are received containing a &quot;next payment date&quot; value.</inlineHelpText>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__On_Payment_Completed__c</fullName>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <inlineHelpText>&quot;On Payment Completed&quot; tag(s) to copy to each payment record that is auto-attached to this profile.  Multiple tags should be delimited using semi-colons.</inlineHelpText>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <label>Deprecated</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recurring Charges</relationshipLabel>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PayPal_Recurring_Payment_Id__c</fullName>
        <inlineHelpText>Recurring payment profile Id assigned by PayPal</inlineHelpText>
        <label>PayPal Recurring Payment ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__PayPal_Subscription_Id__c</fullName>
        <inlineHelpText>ID assigned by PayPal</inlineHelpText>
        <label>PayPal Subscription ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Payment method to use when processing scheduled payments.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>kugo2p__Payment_Method__c</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Period__c</fullName>
        <inlineHelpText>Combined with frequency to determine the time period between each subscription payment.</inlineHelpText>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>SemiMonth</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Processing_Action_Lead_Time__c</fullName>
        <description>Number of days before the scheduled payment date for each Payment to perform the scheduled processing action (e.g. Send payment request).</description>
        <inlineHelpText>Number of days before the scheduled payment date for each Payment to perform the scheduled processing action (e.g. Send payment request).</inlineHelpText>
        <label>Processing Action Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Processor_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Connection</label>
        <referenceTo>kugo2p__Processor_Connection__c</referenceTo>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Profile_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>AuthNet Subscription</fullName>
                </value>
                <value>
                    <fullName>PayPal Subscription</fullName>
                </value>
                <value>
                    <fullName>PayPal Recurring Payment</fullName>
                </value>
                <value>
                    <fullName>WorldPay Recurring Payment</fullName>
                </value>
                <value>
                    <fullName>Scheduled Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderServiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deprecated</label>
        <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
        <relationshipLabel>Recurring Charges</relationshipLabel>
        <relationshipName>Recurring_Billing_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Recurring Charges</relationshipLabel>
        <relationshipName>Scheduled_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Scheduled_Processing_Action__c</fullName>
        <description>Method to use when processing scheduled payments under this profile.</description>
        <inlineHelpText>Method to use when processing scheduled payments under this profile.</inlineHelpText>
        <label>Scheduled Processing Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process using assigned Payment Method</fullName>
                </value>
                <value>
                    <fullName>Process using default Payment Method on Contact</fullName>
                </value>
                <value>
                    <fullName>Send payment request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Company__c</fullName>
        <label>Ship To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Name__c</fullName>
        <label>Contact Shipping Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Postal_Code__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Shipping</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping__c</fullName>
        <inlineHelpText>Recurring payment shipping amount</inlineHelpText>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Subscription_Start_Date__c</fullName>
        <inlineHelpText>Date that subscription billing is to commence.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Activated</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Suspended_Date__c</fullName>
        <description>Date of profile suspension.  Used to calculate next payment date and then cleared when profile is resumed.</description>
        <inlineHelpText>Date of profile suspension.  Used to calculate next payment date and then cleared when profile is resumed.</inlineHelpText>
        <label>Suspended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Tax__c</fullName>
        <inlineHelpText>Recurring payment tax amount</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Total_Amount__c</fullName>
        <description>Total recurring payment Amount</description>
        <formula>kugo2p__Amount__c + kugo2p__Tax__c + kugo2p__Shipping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total recurring payment Amount</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Total_Occurrences__c</fullName>
        <description>PayPal: This number is of the recurring charges only and does not include first/initial charge. 
Authorize.Net: This number includes both first/initial charge and subsequent recurring charges.</description>
        <inlineHelpText>Total number of billing occurrences or payments for the subscription.</inlineHelpText>
        <label>Total Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Amount__c</fullName>
        <inlineHelpText>First Charge Amount that may be different from the Recurring Amount</inlineHelpText>
        <label>First Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Frequency__c</fullName>
        <inlineHelpText>Frequency of charges during the trial period of a subscription (e.g. every X Months)</inlineHelpText>
        <label>First Charge Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Occurrences__c</fullName>
        <inlineHelpText>Number of cycles to bill during trial period.</inlineHelpText>
        <label>First Charge Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Period__c</fullName>
        <inlineHelpText>Combined with trial frequency to determine the time period between each trial subscription payment.</inlineHelpText>
        <label>First Charge Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>SemiMonth</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recurring Charge</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__Contact__c</columns>
        <columns>kugo2p__Profile_Type__c</columns>
        <columns>kugo2p__Subscription_Status__c</columns>
        <columns>kugo2p__Subscription_Start_Date__c</columns>
        <columns>kugo2p__Processor_Connection__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Charges</pluralLabel>
    <recordTypes>
        <fullName>kugo2p__AuthNet_Subscription</fullName>
        <active>true</active>
        <description>Stores information about an Authorize.Net subscription (ARB).</description>
        <label>AuthNet Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__Credit_Card</fullName>
        <active>true</active>
        <description>Credit Card profile information</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__Generic_Profile</fullName>
        <active>true</active>
        <description>Generic Payment Profile record type</description>
        <label>Generic Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__PayPal_Recurring_Payment</fullName>
        <active>true</active>
        <description>Stores information about a PayPal Recurring Payment profile.</description>
        <label>PayPal Recurring Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__PayPal_Subscription</fullName>
        <active>false</active>
        <description>Stores information about a PayPal subscription.</description>
        <label>PayPal Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__Scheduled_Payment</fullName>
        <active>true</active>
        <description>Native scheduled payment profile.</description>
        <label>Native Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__WorldPay_Recurring_Payment</fullName>
        <active>true</active>
        <label>Deprecated</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>